Working on install-and-run document. Updated fetch-thirdparty.sh to skip AppEngine SDK and Gson by default. Added dl, dt, dd elements to text_library. Working on updating the code to compile and run with recent JDKs. Fixed extensions to avoid set_expanded(null)